--- a/resources/sass/profile.scss
+++ b/resources/sass/profile.scss
@@ -3,6 +3,7 @@ body {
   background-position: center;
   background-color: #000;
   color: #fff;
+  //background-image: url(sass/aaa.jpg);
 }
 
 .navbar-laravel {
@@ -48,3 +49,7 @@ body {
   border-color: #fff;
   background-color: #000;
 }
+
+// .py-4 {
+//   background-image: white;
+// }
